# asteroid

./: Cargo.toml  build.rs
sfx/: background_music.raw  explode.raw  ship_explosion.raw  shoot.raw
src/: main.rs  ship.rs  vector.rs
