[package]
name = "asteroid"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = {path = "../rust/agb"}

[build-dependencies]
agb_image_converter = {path = "../rust/agb-image-converter"}

[profile.release]
panic = "abort"
lto = true