[package]
name = "asteroid"
version = "0.1.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = {path = "../rust/agb"}

[build-dependencies]
agb_image_converter = "0.2.0"

[profile.release]
panic = "abort"
lto = true